syntax = "proto3";
package ink.pmc.transfer.proto;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "ProtoCategory.proto";
import "ProtoDestination.proto";
import "Summary.proto";
import "CategoryBundle.proto";
import "DestinationBundle.proto";
import "ConditionVerify.proto";
import "HealthyReport.proto";

service TransferRpc {
  rpc GetSummary(google.protobuf.Empty) returns (Summary);
  rpc RegisterDestination(ProtoDestination) returns (google.protobuf.Empty);
  rpc RegistryCategory(ProtoCategory) returns (google.protobuf.Empty);
  rpc VerifyCondition(ConditionVerifyReq) returns (ConditionVerifyRsp);
  rpc ReportHealthy(HealthyReport) returns (google.protobuf.Empty);
}